--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,12 @@
 /*
     *****************
-    DONE BY:-   TUMMALA KETHAN
+    DONE BY:-   Avishkar Hongekar
     *****************
 */
 * {
   margin: 0px;
   padding: 0px;
-  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: large;
   font-weight: bold;
   text-transform: uppercase;
@@ -18,9 +18,9 @@ nav {
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: 30% 60%;
-      grid-template-columns: 30% 60%;
+  grid-template-columns: 30% 60%;
   -webkit-column-gap: 10%;
-          column-gap: 10%;
+  column-gap: 10%;
   padding: 0% 5%;
 }
 
@@ -28,7 +28,7 @@ nav .array-inputs {
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: 60% 40%;
-      grid-template-columns: 60% 40%;
+  grid-template-columns: 60% 40%;
   place-content: center;
   padding: 5% 0%;
 }
@@ -60,8 +60,8 @@ nav .header_right {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
 }
 
 nav .header_right .nav-heading {
@@ -73,8 +73,8 @@ nav .header_right .nav-heading {
 nav .header_right .algos {
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (16.66667%)[6];
-      grid-template-columns: repeat(6, 16.66667%);
+  -ms-grid-columns: (16.66667%) [6];
+  grid-template-columns: repeat(6, 16.66667%);
   place-content: center;
   padding: 2% 0%;
 }
@@ -122,7 +122,7 @@ section {
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: 20% 60% 20%;
-      grid-template-columns: 20% 60% 20%;
+  grid-template-columns: 20% 60% 20%;
 }
 
 section .Complexity_Containers {
@@ -188,7 +188,7 @@ section #Info_Cont2 h3 {
 */
 /*
     *****************
-    DONE BY:-   TUMMALA KETHAN
+    DONE BY:-   Avishkar Hongekar
     *****************
 */
 /*# sourceMappingURL=style.css.map */
